--- a/app/src/main/res/layout/fragment_inquiry.xml
+++ b/app/src/main/res/layout/fragment_inquiry.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.inquiry.InquiryFragment">
+    tools:context=".activity.InquiryFragment">
 <!--    android:paddingBottom="?attr/bottomNavigationStyle">-->
 
     <ScrollView
