--- a/app/src/main/res/layout/fragment_operationinfo.xml
+++ b/app/src/main/res/layout/fragment_operationinfo.xml
@@ -67,4 +67,13 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"/>
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/createBtn"
+        android:text="ボタン追加"
+        app:layout_constraintTop_toBottomOf="@id/numata"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
