--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -6,6 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".activity.ScheduleFragment">
 
+    <Button
+        android:id="@+id/updateBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="更新"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/schedules" />
+
     <TextView
         android:id="@+id/text_home"
         android:layout_width="match_parent"
@@ -210,9 +218,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:gravity="center"
                 android:background="@color/purple_200"
-                android:text="3"/>
+                android:gravity="center"
+                android:text="3" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -453,11 +461,13 @@
         app:layout_constraintLeft_toLeftOf="parent"/>
 
     <Button
+        android:id="@+id/deleteBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/updateBtn"
-        android:text="更新"
-        app:layout_constraintTop_toBottomOf="@id/schedules"
-        app:layout_constraintRight_toRightOf="parent"/>
+        android:layout_marginRight="24dp"
+        android:text="デバッグ用全削除"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/updateBtn" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
