ボタンの任意で作成する機能を改良

--- a/app/src/main/res/layout/fragment_operationinfo.xml
+++ b/app/src/main/res/layout/fragment_operationinfo.xml
@@ -68,7 +68,7 @@
         app:layout_constraintLeft_toLeftOf="parent"/>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/addLinearLayout"
         app:layout_constraintTop_toBottomOf="@id/numata"
