--- a/app/src/main/res/layout/fragment_operationinfo.xml
+++ b/app/src/main/res/layout/fragment_operationinfo.xml
@@ -67,16 +67,24 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"/>
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/addLinearLayout"
+        android:layout_height="0dp"
+        android:id="@+id/scrollView"
         app:layout_constraintTop_toBottomOf="@id/numata"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:orientation="vertical">
+        app:layout_constraintBottom_toTopOf="@id/updateBtn">
 
-    </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/addLinearLayout"
+            android:orientation="vertical">
+
+        </LinearLayout>
+
+    </ScrollView>
 
     <Button
         android:layout_width="0dp"
@@ -84,7 +92,7 @@
         android:id="@+id/createBtn"
         android:text="ボタン追加"
         app:layout_constraintHorizontal_weight="@integer/material_motion_duration_long_1"
-        app:layout_constraintTop_toBottomOf="@id/addLinearLayout"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toLeftOf="@id/updateBtn"
         app:layout_constraintLeft_toLeftOf="parent"/>
 
@@ -94,7 +102,7 @@
         android:id="@+id/updateBtn"
         android:text="更新"
         app:layout_constraintHorizontal_weight="@integer/material_motion_duration_long_1"
-        app:layout_constraintTop_toBottomOf="@id/addLinearLayout"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toRightOf="@id/createBtn"/>
 
