--- a/app/src/main/res/layout/fragment_operationinfo.xml
+++ b/app/src/main/res/layout/fragment_operationinfo.xml
@@ -74,7 +74,7 @@
         app:layout_constraintTop_toBottomOf="@id/numata"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/updateBtn">
+        app:layout_constraintBottom_toTopOf="@id/createBtn">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -93,17 +93,17 @@
         android:text="ボタン追加"
         app:layout_constraintHorizontal_weight="@integer/material_motion_duration_long_1"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/updateBtn"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"/>
 
-    <Button
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/updateBtn"
-        android:text="更新"
-        app:layout_constraintHorizontal_weight="@integer/material_motion_duration_long_1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/createBtn"/>
+<!--    <Button-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:id="@+id/updateBtn"-->
+<!--        android:text="更新"-->
+<!--        app:layout_constraintHorizontal_weight="@integer/material_motion_duration_long_1"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintRight_toRightOf="parent"-->
+<!--        app:layout_constraintLeft_toRightOf="@id/createBtn"/>-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
