change:時間割の更新ボタンを登録ボタンに統合

--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -41,9 +41,9 @@
         android:layout_height="wrap_content"
         android:text="デバッグ用全削除"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/newClass"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/schedule_table_layout" />
+        app:layout_constraintTop_toBottomOf="@+id/newClass" />
 
     <Button
         android:id="@+id/newClass"
@@ -51,22 +51,9 @@
         android:layout_height="wrap_content"
         android:text="講義登録"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/schedule_table_layout" />
-
-    <Button
-        android:id="@+id/updateBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="更新"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/newClass"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/schedule_table_layout" />
-
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
