add:ToolBarへ報告機能追加

--- a/app/src/main/res/menu/toolbar_layout.xml
+++ b/app/src/main/res/menu/toolbar_layout.xml
@@ -8,4 +8,10 @@
         android:icon="@drawable/baseline_password_24"
         app:showAsAction="never"/>
 
+    <item
+        android:id="@+id/report"
+        android:title="@string/report"
+        android:icon="@drawable/baseline_report_problem_24"
+        app:showAsAction="never"/>
+
 </menu>
