--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -30,7 +30,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/hcuOsirase"
+        android:id="@+id/hcuNotification"
         android:text="大学からのお知らせ"
         android:gravity="center"
         android:textSize="20sp"
@@ -38,23 +38,15 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/hcuNasi"
-        android:text="なし"
-        android:textSize="30sp"
-        app:layout_constraintTop_toBottomOf="@id/hcuOsirase"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/hcuNotification"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/changePasswordBtn"
-        android:text="@string/changePassword"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+
+    </ScrollView>
 
     <Button
         android:layout_width="wrap_content"
@@ -69,7 +61,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/testText"
         android:text="string"
-        app:layout_constraintTop_toBottomOf="@id/hcuNasi"
+        app:layout_constraintTop_toBottomOf="@id/hcuNotification"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent" />
 
