--- a/app/src/main/res/layout/activity_password.xml
+++ b/app/src/main/res/layout/activity_password.xml
@@ -10,6 +10,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/changePasswordBox"
         android:orientation="vertical"
         android:gravity="center"
         android:visibility="visible"
@@ -49,11 +50,25 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/changePasswordBtn"
-            android:text="@string/changePassword"/>
-
     </LinearLayout>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/changePasswordCancelBtn"
+        android:text="@string/cancel"
+        app:layout_constraintTop_toBottomOf="@id/changePasswordBox"
+        app:layout_constraintRight_toLeftOf="@id/changePasswordBtn"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/changePasswordBtn"
+        android:text="@string/changePassword"
+        app:layout_constraintTop_toBottomOf="@id/changePasswordBox"
+        app:layout_constraintLeft_toRightOf="@id/changePasswordCancelBtn"
+        app:layout_constraintRight_toRightOf="parent" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
