--- a/app/src/main/res/layout/fragment_operationinfo.xml
+++ b/app/src/main/res/layout/fragment_operationinfo.xml
@@ -32,7 +32,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/info"
-        android:text="運休，遅延情報なし"
+        android:text="(現在利用できません)"
         android:textSize="30sp"
         app:layout_constraintTop_toBottomOf="@id/jr"
         app:layout_constraintLeft_toLeftOf="parent"
