--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -6,32 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".activity.NotificationsFragment">
 
-<!--    <TextView-->
-<!--        android:id="@+id/text_notifications"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:textSize="20sp"-->
-<!--        android:gravity="center"-->
-<!--        android:text="休講連絡"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        app:layout_constraintLeft_toLeftOf="parent"-->
-<!--        app:layout_constraintRight_toRightOf="parent"/>-->
-
-<!--    <TextView-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:id="@+id/kyukou"-->
-<!--        android:text="月曜日3限　日本論"-->
-<!--        android:textSize="30sp"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/text_notifications"-->
-<!--        app:layout_constraintLeft_toLeftOf="parent"-->
-<!--        app:layout_constraintRight_toRightOf="parent"/>-->
-
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/hcuNotification"
-        android:text="大学からのお知らせ"
+        android:text="@string/notification"
         android:gravity="center"
         android:textSize="20sp"
         app:layout_constraintTop_toTopOf="parent"
@@ -42,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/nothingNotification"
-        android:text="a"
+        android:text="@string/error"
         android:textSize="20sp"
         app:layout_constraintTop_toBottomOf="@id/hcuNotification"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -53,7 +32,8 @@
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/hcuNotification"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/updateBtn">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -72,15 +52,6 @@
         android:id="@+id/updateBtn"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:text="更新"/>
-
-<!--    <TextView-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:id="@+id/testText"-->
-<!--        android:text="string"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/hcuNotification"-->
-<!--        app:layout_constraintRight_toRightOf="parent"-->
-<!--        app:layout_constraintLeft_toLeftOf="parent" />-->
+        android:text="@string/update"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
