--- a/app/src/main/res/layout/operation_deletebtn_dialog.xml
+++ b/app/src/main/res/layout/operation_deletebtn_dialog.xml
@@ -8,7 +8,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ボタン一覧"
+        android:text="@string/allButtons"
         android:layout_gravity="center_horizontal"/>
 
     <ScrollView
