--- a/app/src/main/res/layout/notification_dialog.xml
+++ b/app/src/main/res/layout/notification_dialog.xml
@@ -15,7 +15,8 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="200dp">
+        android:layout_height="200dp"
+        android:background="@drawable/frame_style">
 
         <TextView
             android:layout_width="match_parent"
