--- a/app/src/main/res/layout/fragment_inquiry.xml
+++ b/app/src/main/res/layout/fragment_inquiry.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/inquiry"
         android:text="@string/問い合わせ"
+        android:textSize="20sp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"/>
@@ -20,26 +21,58 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/inquiry_title"
-        android:hint="タイトル"
+        android:hint="@string/title"
         app:layout_constraintTop_toBottomOf="@id/inquiry"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:importantForAutofill="no"
+        tools:ignore="TextFields" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/inquiry_content"
-        android:hint="問い合わせ内容"
+        android:hint="@string/inquiryContent"
         app:layout_constraintTop_toBottomOf="@id/inquiry_title"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:importantForAutofill="no"
+        tools:ignore="TextFields" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/sendBtn"
-        android:text="送信"
+        android:text="@string/send"
         app:layout_constraintTop_toBottomOf="@id/inquiry_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/linksText"
+        android:text="@string/links"
+        android:textSize="20sp"
+        app:layout_constraintTop_toBottomOf="@id/sendBtn"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:gravity="center"/>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/linksText"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/addLinearLayout"
+            android:orientation="vertical">
+
+        </LinearLayout>
+
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
