update：アプリアイコン等を変更

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,7 @@
 
     <style name="AppTheme.App.Starting" parent="Theme.SplashScreen">
         <item name="windowSplashScreenBackground">#FDFDFD</item>
-        <item name="windowSplashScreenAnimatedIcon">@mipmap/ic_hcu_icon</item>
+        <item name="windowSplashScreenAnimatedIcon">@mipmap/ic_launcher_mozi</item>
         <item name="postSplashScreenTheme">@style/Theme.AnpikakuninProject</item>
     </style>
 
