--- a/app/src/main/res/layout/notification_dialog.xml
+++ b/app/src/main/res/layout/notification_dialog.xml
@@ -8,8 +8,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/error"
-        android:textColor="@color/black"
-        android:textSize="20sp"
         android:id="@+id/notificationTitle"
         android:gravity="start"/>
 
@@ -18,14 +16,29 @@
         android:layout_height="200dp"
         android:background="@drawable/frame_style">
 
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/error"
-            android:textColor="@color/black"
-            android:textSize="25sp"
-            android:id="@+id/notificationContent"
-            android:gravity="start"/>
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/error"
+                android:textSize="15sp"
+                android:id="@+id/notificationContent"
+                android:gravity="start"/>
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/notificationUrl"
+                android:textAllCaps="false"
+                android:maxLines="1"
+                android:ellipsize="end"/>
+
+        </LinearLayout>
+
 
     </ScrollView>
 
