--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -7,38 +7,38 @@
     tools:context=".activity.NotificationsFragment">
 
     <TextView
+        android:id="@+id/hcuNotification"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/hcuNotification"
-        android:text="@string/notification"
         android:gravity="center"
+        android:text="@string/notification"
         android:textSize="20sp"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/nothingNotification"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/nothingNotification"
         android:text="@string/error"
         android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@id/hcuNotification"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/hcuNotification" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/hcuNotification"
+        app:layout_constraintBottom_toTopOf="@id/updateBtn"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/updateBtn">
+        app:layout_constraintTop_toBottomOf="@id/hcuNotification">
 
         <LinearLayout
+            android:id="@+id/addLinearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/addLinearLayout"
             android:orientation="vertical">
 
         </LinearLayout>
@@ -47,11 +47,11 @@
     </ScrollView>
 
     <Button
+        android:id="@+id/updateBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/updateBtn"
+        android:text="@string/update"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:text="@string/update"/>
+        app:layout_constraintRight_toRightOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
