--- a/app/src/main/res/drawable/frame_style.xml
+++ b/app/src/main/res/drawable/frame_style.xml
@@ -3,7 +3,13 @@
     android:shape="rectangle">
 
     <stroke
-        android:width="2dp"
+        android:width="1dp"
         android:color="@color/black"/>
+
+    <padding
+        android:top="2dp"
+        android:bottom="2dp"
+        android:left="2dp"
+        android:right="2dp"/>
 
 </shape>
