--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,9 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#696969</color>
     <color name="lemonchiffon">#fffacd</color>
-    <color name="hcuLightBlue">#53a2d7</color>
+    <color name="hcu_light_blue300">#6eb2dd</color>
+    <color name="hcu_light_blue400">#53a2d7</color>
+    <color name="hcu_light_blue700">#2875b3</color>
     <color name="hcuRed">#d43238</color>
     <color name="hcuGreen">#61ac54</color>
 </resources>
